Fixed jtreg wrapper in agentvm mode.